adapt itinerary to one dimensionnal block